[project]
name = "nasa-gcmd"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Woodcock", email = "samuel.woodcock@wsl.ch"},
]
dependencies = [
    "envidat-utils[dotenv]==1.0.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "debugpy>=1.6.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"